Добавлена функция случайных картинок

--- a/index.html
+++ b/index.html
@@ -11,31 +11,32 @@
     <div class="game-field">
         <table>
             <tr>
-                <td class="img1"></td>
-                <td class="img1"></td>
-                <td class="img2"></td>
-                <td class="img2"></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
-                <td class="img3"></td>
-                <td class="img3"></td>
-                <td class="img4"></td>
-                <td class="img4"></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
-                <td class="img5"></td>
-                <td class="img5"></td>
-                <td class="img6"></td>
-                <td class="img6"></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
-                <td class="img7"></td>
-                <td class="img7"></td>
-                <td class="img8"></td>
-                <td class="img8"></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
         </table>
     </div>
 </div>
+<script src="js/main.js"></script>
 </body>
 </html>
