--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             </tr>
         </table>
     </div>
+    <button id="startBtn">начать игру</button>
+    <p id="instructions"></p>
 </div>
 <script src="js/main.js"></script>
 </body>
