--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div class="container">
     <h1>Игра</h1>
     <div class="game-field">
+        <p id="tryCounter"></p>
         <table>
             <tr>
                 <td></td>
