--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <div class="container">
     <h1>Игра</h1>
 
-    <div class="view view-active">
+    <div class="view view-active" id="start-page">
         <div class="game-field">
             <h2>Добро пожаловать в игру!</h2>
             <p>чтобы начать нажмите кнопку</p>
         </div>
         <button id="startBtn">начать игру</button>
     </div>
-    <div class="view">
+    <div class="view" id="game-page">
         <div class="game-field">
             <p id="tryCounter"></p>
         </div>
